# cirulnik_admin_bot

./: .env.dist  .gitignore  DB_diagram.txt  DB_sandbox async.ipynb  DB_sandbox.ipynb  README.md  alembic.ini  background.py  bot.py  main.py  pyproject.toml
infrastructure/database/: setup.py
infrastructure/database/models/: __init__.py  base.py  locations.py  users.py
infrastructure/database/repo/: locations.py  requests.py  users.py
infrastructure/migrations/: env.py
infrastructure/migrations/versions/: 2024_05_28_1530-29b3114580d8_database_creation.py  2024_06_01_1610-54a4e7811a89_added_users_logged_as.py  2024_06_13_1616-42cd039fcabc_locations.py  2024_06_13_2111-76086f9f06df_locations.py  2024_06_14_1531-0d40872413ac_userlocations_composite_pk.py  (+2 more)
migrations/: env.py
migrations/versions/: 2024_06_01_1610-54a4e7811a89_added_users_logged_as.py
tgbot/: config.py
tgbot/core/: config.py  loader.py
tgbot/dialogs/: __init__.py  callbacks.py  getters.py  states.py  users_dialogs.py
tgbot/filters/: admin.py  owner.py
tgbot/handlers/: __init__.py  admin.py  admin_nav_buttons.py  auth.py  database_locations.py  database_users.py  echo.py  owner.py  report_evening.py  report_menu.py  report_morning.py  report_nav_buttons.py  simple_menu.py  user.py
tgbot/keyboards/: inline.py  reply.py
tgbot/messages/: bot_msg.py  dialogs_msg.py  handlers_msg.py
tgbot/middlewares/: albums_collector.py  config.py  database.py
tgbot/misc/: notify_admins.py  notify_owners.py  report_to_owners.py  setting_comands.py  states.py
tgbot/services/: broadcaster.py  utils.py
