[tool.poetry]
name = "cirulnik-admin-bot"
version = "0.1.0"
description = ""
authors = ["DipodDP <dipoddp@gmail.com>"]
readme = "README.md"
packages = [{include = "tgbot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = ">=3.0,<4.0"
environs = ">=9.0,<10.0"
# redis = "^5.0.1"
betterlogging = "^0.2.1"
aiohttp-socks = "^0.8.4"
flask = "^3.0.0"
cachetools = "^5.3.2"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
